bootstrap/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/part-of: shared-infra
    app.kubernetes.io/name: vault
